# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  file2.json  pyproject.toml
.github/workflows/: sonarcube.yml
files/: file1.json  file1.yaml
formatters/: json.py  plain.py  stylish.py
gendiff/: __init__.py  diff.py  diff_script.py  gendiff.py  gendiff_yaml.py  generate_diff.py  help_document.py  load_json.py  load_yaml.py  parsing_files.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_diff.py  test_difference.py  test_format_plain.py  test_gendiff.py  test_generate_diff.py  test_json.py  test_load_json.py  test_load_yaml.py  test_stylish.py
tests/test_data/: file1.json  file1.yaml  file1_inner.json  file2.json  file2.yaml  file2_inner.json
