[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-cov>=6.1.1",
]

[tool.uv.workspace]
members = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.gendiff:main"
generate_diff = "gendiff.generate_diff:main"
gendiff_yaml = "gendiff.gendiff_yaml:main"
